# MyAlgorithmTrain

./: .gitignore
CppImpl/: .gitignore  CMakeLists.txt
CppImpl/card/: Main.cpp
CppImpl/frog/: Main.cpp
CppImpl/knapsack2/: Main.cpp
CppImpl/nearest-point-pair/: Main.cpp
CppImpl/number-box/: Main.cpp  readme.txt
CppImpl/re-encode/: Main.cpp
CppImpl/score-sort/: Main.cpp
CppImpl/sorting/: Main.cpp
NumberBox/src/: Main.java
bst/: Main  Main.cpp
bst/src/: Main.java
chess/src/: Main.java
convex-hull/src/: Main.java
cows/src/: Main.java
deng-number/: Main.cpp
deng-number/src/: Main.java
equality/data/: sample2.in  sample3.in
equality/src/: Main.java
grouping/src/: Main.java
knapsack1/src/: Main.java
knapsack2/src/: Main.java
longest-common-subsequence/src/: Main.java
lower-bound/data/: sample1.in  sample1.out
lower-bound/src/: Main.java
matrix/src/: Main.java
maximum-clearance/src/: Main.java
minimum-swap/src/: Main.java
n-queen/src/: Main.java
nearest-point-pair/src/: Main.java
number-triangle/src/: Main.java
palindromic-substring/src/: Main.java
pour-water/: Main.cpp
pour-water/src/: Main.java
prefix/: Main.cpp
prefix/src/: Main.java
queue/: Main  Main.cpp
randix-sort/src/: Main.java
re-encode/src/: Main.java
road-upgrade/data/: sample.in
road-upgrade/src/: Main.java
score-sort/: sample.in
score-sort/src/: Main.java
sequence-count/src/: Main.java
shortest-path/src/: Main.java
sorting/src/: BubbleSort.java  BubbleSortOptimized.java  HeapSort.java  (+8 more)
stack/: Main  Main.cpp  input.txt
(+8 files in other folders)
